# clike

./: .gitignore  Dockerfile  LICENSE  Vagrantfile  clike.cabal  stack.yaml
app/: Main.hs
src/: Codegen.hs  IR.hs  Lexer.hs  Parser.hs
test/: Spec.hs
