name:                clike
version:             0.1.0.0
synopsis:            A vaguely C-like programming language
description:         Please see README.md
homepage:            http://github.com/benstreb/clike
license:             BSD3
license-file:        LICENSE
author:              Benjamin Streb
maintainer:          bstreb@gmail.com
copyright:           2015 Benjamin Streb
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer, Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable clike-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clike
  default-language:    Haskell2010

test-suite clike-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clike
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benstreb/clike
